Add multi-environment support: local and deployed backend configurations
- Update .env files to use deployed backend (https://trees-backend-7pci.onrender.com)
- Add .env.local for localhost development
- Add .env.production for production builds
- Update package.json with environment-specific scripts
- Add setup-env.sh script for easy environment switching
- Update README with comprehensive environment documentation
- Keep backward compatibility with localhost options

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 ﻿# root
 .env
-*.env
+.env.local
 *.log
 .DS_Store
+
+# Keep environment templates and production configs
+!.env.example
+!.env.production
 
 # node
 node_modules/
