--- a/.env.production
+++ b/.env.production
@@ -1,19 +1,16 @@
-# Backend API URL - Choose one based on your environment
-# For production/deployed backend:
+# Production Environment Configuration
+# Use this for deployed/production builds
+
+# Backend API URL
 VITE_API_BASE_URL=https://trees-backend-7pci.onrender.com/api
-# For local development:
-# VITE_API_BASE_URL=http://localhost:3000/api
 
 # App Configuration
 VITE_APP_NAME="TreesWeb Social"
 VITE_APP_VERSION=1.0.0
-VITE_FRONTEND_URL=http://localhost:8080
+VITE_FRONTEND_URL=https://your-vercel-deployment-url.vercel.app
 
-# Socket.IO Configuration - Choose one based on your environment
-# For production/deployed backend:
+# Socket.IO Configuration
 VITE_SOCKET_URL=https://trees-backend-7pci.onrender.com
-# For local development:
-# VITE_SOCKET_URL=http://localhost:3000
 
 # Upload Configuration
 VITE_MAX_FILE_SIZE=10485760
@@ -26,5 +23,5 @@ VITE_ENABLE_SUBSCRIPTIONS=true
 VITE_ENABLE_ADMIN_PANEL=true
 
 # Development
-VITE_DEBUG_MODE=true
+VITE_DEBUG_MODE=false
 VITE_SHOW_PERFORMANCE_METRICS=false
