--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ VITE_API_BASE_URL=https://trees-backend-7pci.onrender.com/api
 # App Configuration
 VITE_APP_NAME="TreesWeb Social"
 VITE_APP_VERSION=1.0.0
-VITE_FRONTEND_URL=http://localhost:8080
+VITE_FRONTEND_URL=https://your-frontend-url.com
 
 # Socket.IO Configuration - Choose one based on your environment
 # For production/deployed backend:
