--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Backend API URL - Choose one based on your environment
 # For production/deployed backend:
-VITE_API_BASE_URL=https://trees-backend-7pci.onrender.com/api
+VITE_API_BASE_URL=http://51.20.41.208/api/
 # For local development:
 # VITE_API_BASE_URL=http://localhost:3000/api
 
@@ -11,7 +11,7 @@ VITE_FRONTEND_URL=https://your-frontend-url.com
 
 # Socket.IO Configuration - Choose one based on your environment
 # For production/deployed backend:
-VITE_SOCKET_URL=https://trees-backend-7pci.onrender.com
+VITE_SOCKET_URL=http://51.20.41.208
 # For local development:
 # VITE_SOCKET_URL=http://localhost:3000
 
