--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 # Use this for deployed/production builds
 
 # Backend API URL
-VITE_API_BASE_URL=https://trees-backend-7pci.onrender.com/api
+VITE_API_BASE_URL=http://51.20.41.208/api/
 
 # App Configuration
 VITE_APP_NAME="TreesWeb Social"
@@ -10,7 +10,7 @@ VITE_APP_VERSION=1.0.0
 VITE_FRONTEND_URL=https://your-vercel-deployment-url.vercel.app
 
 # Socket.IO Configuration
-VITE_SOCKET_URL=https://trees-backend-7pci.onrender.com
+VITE_SOCKET_URL=http://51.20.41.208
 
 # Upload Configuration
 VITE_MAX_FILE_SIZE=10485760
